--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine-html.js"></script>
   <script type="text/javascript" src="src/jquery-1.6.1.min.js"></script>
   <script type="text/javascript" src="src/underscore.min.js"></script>
+  <script type="text/javascript" src="src/User.js"></script>
 
   <!-- include source files here... 
   <script type="text/javascript" src="src/Player.js"></script>
@@ -19,6 +20,7 @@
   <script type="text/javascript" src="spec/PlayerSpec.js"></script>
   -->
   <script type="text/javascript" src="spec/JavascriptSpec.js"></script>
+  <script type="text/javascript" src="spec/LunchHuddleSpec.js"></script>
 
 </head>
 <body>
