--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -7,18 +7,12 @@
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine-html.js"></script>
   <script type="text/javascript" src="src/jquery-1.6.1.min.js"></script>
+
+  <!-- include source files here... -->
   <script type="text/javascript" src="src/underscore.min.js"></script>
   <script type="text/javascript" src="src/User.js"></script>
 
-  <!-- include source files here... 
-  <script type="text/javascript" src="src/Player.js"></script>
-  <script type="text/javascript" src="src/Song.js"></script>
-  -->
-
-  <!-- include spec files here... 
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/PlayerSpec.js"></script>
-  -->
+  <!-- include spec files here...  -->
   <script type="text/javascript" src="spec/JavascriptSpec.js"></script>
   <script type="text/javascript" src="spec/LunchHuddleSpec.js"></script>
 
