--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -10,6 +10,7 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/underscore.min.js"></script>
+  <script type="text/javascript" src="src/util.jquery.js"></script>
   <script type="text/javascript" src="src/User.js"></script>
 
   <!-- include spec files here...  -->
