MessageFactory.create('mock') will return a MockSvc object

--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="src/underscore.min.js"></script>
   <script type="text/javascript" src="src/util.jquery.js"></script>
   <script type="text/javascript" src="src/User.js"></script>
+  <script type="text/javascript" src="src/messaging.js"></script>
 
   <!-- include spec files here...  -->
   <script type="text/javascript" src="spec/JavascriptSpec.js"></script>
