--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -12,7 +12,9 @@
   <script type="text/javascript" src="src/underscore.min.js"></script>
   <script type="text/javascript" src="src/util.jquery.js"></script>
   <script type="text/javascript" src="src/User.js"></script>
+  <script type="text/javascript" src="src/index_event_handlers.js"></script>
   <script type="text/javascript" src="src/messaging.js"></script>
+  <script type="text/javascript" src="src/restaurants.js"></script>
 
   <!-- include spec files here...  -->
   <script type="text/javascript" src="spec/JavascriptSpec.js"></script>
