--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="src/index_event_handlers.js"></script>
   <script type="text/javascript" src="src/messaging.js"></script>
   <script type="text/javascript" src="src/restaurants.js"></script>
+  <script type="text/javascript" src="src/VoteView.js"></script>
 
   <!-- include spec files here...  -->
   <script type="text/javascript" src="spec/JavascriptSpec.js"></script>
