--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -7,11 +7,13 @@
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine-html.js"></script>
   <script type="text/javascript" src="src/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src="src/jjquery.cookie-modified.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/underscore.min.js"></script>
   <script type="text/javascript" src="src/util.jquery.js"></script>
   <script type="text/javascript" src="src/User.js"></script>
+  <script type="text/javascript" src="src/UserInfo.js"></script>
   <script type="text/javascript" src="src/index_event_handlers.js"></script>
   <script type="text/javascript" src="src/messaging.js"></script>
   <script type="text/javascript" src="src/restaurants.js"></script>
