fixed bug. reference to VoteView change to vote_view

--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -6,18 +6,16 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.0.2/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine-html.js"></script>
-  <script type="text/javascript" src="src/jquery-1.6.1.min.js"></script>
-  <script type="text/javascript" src="src/jjquery.cookie-modified.js"></script>
+  <script type="text/javascript" src="src/lib/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src="src/lib/underscore.min.js"></script>
+  <script type="text/javascript" src="src/lib/backbone-min.js"></script>
+  <script type="text/javascript" src="src/lib/util.jquery.js"></script>
+  <script type="text/javascript" src="src/lib/jjquery.cookie-modified.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/underscore.min.js"></script>
-  <script type="text/javascript" src="src/util.jquery.js"></script>
-  <script type="text/javascript" src="src/User.js"></script>
-  <script type="text/javascript" src="src/UserInfo.js"></script>
-  <script type="text/javascript" src="src/index_event_handlers.js"></script>
+  <script type="text/javascript" src="src/Logger.js"></script>
   <script type="text/javascript" src="src/messaging.js"></script>
-  <script type="text/javascript" src="src/restaurants.js"></script>
-  <script type="text/javascript" src="src/VoteView.js"></script>
+  <script type="text/javascript" src="src/view/SendInvitesView.js"></script>
 
   <!-- include spec files here...  -->
   <script type="text/javascript" src="spec/JavascriptSpec.js"></script>
